--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">VizSec Papers <em>[alpha]</em></a>
+                        <a class="navbar-brand" href="http://vizsec.dbvis.de/">VizSec Papers <em>[alpha]</em></a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
