Add files for VizSec 2019

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,8 @@
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="http://www.vis.uni-konstanz.de/en/members/fischer/"><i class="glyphicon glyphicon-envelope"></i><span>&nbsp; <em>Maintained by F. Fischer</em></span></a></li>
+                            <li><a href="https://ff.cx/contact/"><i class="glyphicon glyphicon-envelope"></i><span>&nbsp; Imprint</span></a></li>
+                            <li><a href="https://ff.cx/privacy/"><i class="glyphicon glyphicon-eye-open"></i><span>&nbsp; Privacy Policy</span></a></li>
                             <li><a href="http://www.vizsec.org/" target="_blank"><i class="glyphicon glyphicon-info-sign"></i><span>&nbsp; About</span></a></li>
 
 
